# kinetic_ws

./: .gitignore  README.md
src/ORB-SLAM2/: CMakeLists.txt  package.xml
src/ORB-SLAM2/Examples/ROS/ORB_SLAM2/src/: ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
src/ORB-SLAM2/src/: System.cpp
src/ORB_SLAM2/: CMakeLists.txt  package.xml
src/ORB_SLAM2/Examples/ROS/ORB_SLAM2/src/: ros_rgbd.cc  ros_stereo.cc
src/dense_new/: CMakeLists.txt  README.md  package.xml
src/dense_new/calib/: LSD_calib.cfg~  OpenCV_visensor_calib.cfg  combine.yml  combine2.yml  combine2_old.yml  combine3.yml  combine3.yml~  visensor.yml
src/dense_new/cfg/: LSDParams.cfg
src/dense_new/launch/: live_slam.launch~  online_test.launch~  replay_test.launch  slam.launch~  test.launch~
src/dense_new/src/: LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h  main_live_odometry.cpp
src/dense_new/src/DataStructures/: Frame.cpp  Frame.h  FrameMemory.cpp  types.h
src/dense_new/src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/dense_new/src/IOWrapper/ROS/: rosReconfigure.h
src/dense_new/src/Tracking/: LGSX.h  SE3Tracker.cpp  SE3Tracker.h  TrackingReference.cpp  TrackingReference.h
src/dense_new/src/util/: SophusUtil.h  globalFuncs.cpp  globalFuncs.h  marginalization.h  math.h  rosPub.h  settings.cpp  settings.h
src/dense_new/srv/: visensor_calibration_service.srv
src/image_process/: CMakeLists.txt  FileFunctions.cpp  FileFunctions.h  package.xml
src/image_process/include/image_process/: FileFunctions.h~
src/image_process/src/: image_publish.cpp  image_write (copy).cpp~
src/kindr/: CMakeLists.txt  Readme.md  package.xml
src/kindr/doc/: doxygen.config
src/kindr/rpg_svo/svo_ros/: CMakeLists.txt
src/learning_opencv_boost_eigen/: CMakeLists.txt  package.xml  package.xml~
src/learning_opencv_boost_eigen/src/: boost_bitset_node.cpp  cppreference.cpp  eigen_learning.cpp
src/okvis_ros/: CMakeLists.txt  okvis_install
src/okvis_ros/cmake/: FindGflags.cmake
src/okvis_ros/okvis/: CMakeLists.txt
src/okvis_ros/okvis/ThirdPackage/: thirdpackage.sh
src/okvis_ros/okvis/ThirdPackage/VISensor/lib/visensor/: FindVISensor.cmake
src/okvis_ros/okvis/ThirdPackage/VISensor/share/pkgconfig/: visensor.pc
src/okvis_ros/okvis/ThirdPackage/brisk/lib/CMake/brisk/: briskTargets-release.cmake  briskTargets.cmake
src/okvis_ros/okvis/ThirdPackage/libbrisk/: brisk.sh
src/okvis_ros/okvis/ThirdPackage/libopengv/: CMakeLists.txt  opengv.sh
src/okvis_ros/okvis/ThirdPackage/libvisensor/: CMakeLists.txt  install_libvisensor.sh
src/okvis_ros/okvis/ThirdPackage/libvisensor/cmake/: visensor_okvis.cmake.in
src/okvis_ros/okvis/ThirdPackage/libvisensor/pkgconfig/: visensor.cmake.in  visensor.pc.in
src/okvis_ros/okvis/ThirdPackage/opengv/CMake/: opengv-config-release.cmake  opengv-config.cmake
src/okvis_ros/okvis/cmake/: FindCXSparse.cmake  FindCeres.cmake  FindGlog.cmake  FindSuiteSparse.cmake  FindVISensor.cmake
src/rovio/lightweight_filtering/cmake/: FindLWF.cmake
src/visensor_node/launch/: dense.launch
